--- a/agilysyspay/src/main/res/layout/activity_checkout.xml
+++ b/agilysyspay/src/main/res/layout/activity_checkout.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    tools:context=".view.CheckoutActivity">
-        <TextView
+    android:layout_width="match_parent"
+    android:background="@color/cardview_light_background"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".view.CheckoutActivity"
+    android:layout_height="match_parent">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/appbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:titleTextColor="@color/white"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
+        app:layout_constraintTop_toBottomOf="@+id/appbar"
+        android:id="@+id/cardll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="vertical">
+        <TextView
+            android:background="@drawable/round_ui"
+            android:visibility="gone"
             android:layout_marginTop="20dp"
             android:textAlignment="center"
             android:gravity="center_horizontal"
@@ -17,6 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <EditText
+            android:background="@drawable/round_ui"
+            android:visibility="visible"
             android:id="@+id/cardName"
             android:padding="10dp"
             android:layout_marginTop="25dp"
@@ -28,6 +62,7 @@
             android:textSize="14sp"
             />
         <EditText
+            android:background="@drawable/round_ui"
             android:id="@+id/cardNumber"
             android:padding="10dp"
             android:layout_margin="10dp"
@@ -43,6 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
+                android:background="@drawable/round_ui"
                 android:id="@+id/cardMonth"
                 android:padding="10dp"
                 android:layout_margin="10dp"
@@ -55,6 +91,7 @@
 
                 />
             <EditText
+                android:background="@drawable/round_ui"
                 android:id="@+id/cardYear"
                 android:padding="10dp"
                 android:layout_weight="0.6"
@@ -68,6 +105,7 @@
                 />
         </LinearLayout>
         <EditText
+            android:background="@drawable/round_ui"
             android:id="@+id/cardCvv"
             android:padding="10dp"
             android:layout_margin="10dp"
@@ -79,6 +117,7 @@
 
             />
         <EditText
+            android:background="@drawable/round_ui"
             android:id="@+id/pincode"
             android:layout_margin="10dp"
             android:padding="10dp"
@@ -95,8 +134,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
-            android:background="#000000"
+            android:background="@drawable/round_ui"
             android:text="Pay"
+            android:backgroundTint="@color/colorAccent"
             android:padding="10dp"
             android:textSize="16sp"
             android:layout_margin="20dp"
@@ -109,5 +149,18 @@
             android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <ProgressBar
+        app:layout_constraintTop_toBottomOf="@+id/cardll"
+        android:id="@+id/progressDialog"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="visible"
+        android:layout_margin="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:indeterminateTint="@color/colorAccent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
