--- a/agilysyspay/src/main/res/layout/activity_checkout.xml
+++ b/agilysyspay/src/main/res/layout/activity_checkout.xml
@@ -32,6 +32,7 @@
     <LinearLayout
         app:layout_constraintTop_toBottomOf="@+id/appbar"
         android:id="@+id/cardll"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,7 +59,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter cardHolder name"
-
             android:textSize="14sp"
             />
         <EditText
@@ -139,7 +139,7 @@
             android:backgroundTint="@color/colorAccent"
             android:padding="10dp"
             android:textSize="16sp"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:textColor="#FFF" />
 
         <TextView
@@ -155,9 +155,8 @@
         android:id="@+id/progressDialog"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_margin="30dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
